<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/lightrose"
    tools:context=".ui.login.LoginFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="80dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEnd"
        android:orientation="vertical"
        app:layout_constraintGuide_end="80dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glTop"
        app:layout_constraintGuide_percent=".3"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/ivLogoLogin"
        android:src="@drawable/logo"
        android:layout_width="0dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="@id/glTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:height="50dp"
        android:text="@string/title_login"
        android:textAlignment="center"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/glTop"
        />

    <EditText
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:id="@+id/etUser"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/user_hint"
        android:paddingStart="10dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/tvLogin"

        />
    <EditText
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:id="@+id/etPassword"
        android:inputType="textPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/password_hint"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/etUser"

        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/btLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/etPassword" />

    <Button
        android:id="@+id/btRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/btLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>


